--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "singleQuote": true,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": true,
-  "trailingComma": "es5",
-  "bracketSpacing": true,
-  "arrowParens": "always",
-  "printWidth": 120
+	"singleQuote": true,
+	"tabWidth": 4,
+	"useTabs": true,
+	"semi": true,
+	"trailingComma": "es5",
+	"bracketSpacing": true,
+	"arrowParens": "always",
+	"printWidth": 120
 }
