--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "nanoid": "^5.1.6",
     "next": "^15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
